Implemented mutation schemes

--- a/src/environment.yml
+++ b/src/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - numpy
   - numba
   - matplotlib
+  - pandas
   - pip
   - pip:
       - optuna        # Optional for hyperparameter tuning
